@@ -72,7 +72,7 @@ Netzke.pre.FormPanel = Ext.extend(Ext.form.FormPanel, {
       // This is where, for example, the field values get set.
       Ext.apply(field, this.fieldsObject[field.name]);
     }
-    
+
     Ext.applyIf(field, {
       xtype     : this.attrTypeEditorMap[field.attrType || 'string'],
       fieldLabel: field.fieldLabel || field.label || field.name.humanize(),
@@ -95,7 +95,9 @@ Netzke.pre.FormPanel = Ext.extend(Ext.form.FormPanel, {
           
           if (field.name == this.pri) this.primaryPresent = true;
           
-          this.normalizeField(field);
+          // Normalize the field only if it looks like a field, not some other Ext component
+          if (field.name) this.normalizeField(field);
+          
           // var defaultColumnConfig = Ext.apply({}, this.defaultColumnConfig);
           // var columnConfig = Ext.apply(defaultColumnConfig, field);
           // 
