@@ -272,8 +272,7 @@ module Netzke::Component
 
         # When providing the edit_form component, fill in the form with the requested record
         def load_component_with_cache(params)
-          components[:edit_form][:items].first.merge!(:record_id => params[:record_id].to_i) if params[:id] == 'editForm'
-      
+          components[:edit_form][:items].first.merge!(:record_id => params[:record_id].to_i) if params[:name] == 'editForm'
           super
         end
     
